crt coverage section

--- a/main.tex
+++ b/main.tex
@@ -428,7 +428,14 @@ The data reconstruction efficiency is in agreement, within the errors, with the 
 
 We have also shown that the detector non-uniformities must be taken into account in the measurement of the reconstruction efficiency and the related systematic error is 1.1\%.
 
-However, the coverage of the ($\theta$, $\phi$, $L$) parameter space by the MuCS is limited and it is not possible to measure efficiency-corrected quantities such as the cosmic-ray flux. The Cosmic Ray Tagger, assembled last October, will be able instead to tag $\sim$80\% of the cosmic rays hitting the TPC and check the presence of non-uniformities in other parts of the detector.
+However, the coverage of the ($\theta, \phi, L$) parameter space by the MuCS is limited and it is not possible to measure efficiency-corrected quantities such as the cosmic-ray flux. The Cosmic Ray Tagger (CRT), assembled last October, will be able instead to tag $\sim$80\% of the cosmic rays hitting the TPC and check the presence of non-uniformities in other parts of the detector. Fig. \ref{fig:crt} shows the coverage on the ($\theta,\phi$) plane of both the MuCS and the CRT, obtained with a Monte Carlo simulation.
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=0.7\linewidth]{figures/crt.png}
+    \caption{Monte Carlo simulation of the coverage on the ($\theta,\phi$) plane of both the MuCS (light blue) and the CRT (dark blue).} \label{fig:crt}
+  \end{center}
+\end{figure}
 
 \clearpage{}
 
