--- a/main.tex
+++ b/main.tex
@@ -31,13 +31,13 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-  The MicroBooNE experiment is a liquid argon TPC experiment designed for short-baseline neutrino physics, currently running at Fermilab. Due to its location near the surface, cosmic muons can be a source of backgrounds to many analyses and a good understanding of them is of fundamental importance for the experiment. This study presents a method of using an external muon counter system to determine the cosmic-ray reconstruction efficiency in MicroBooNE.
+  The MicroBooNE experiment is a liquid argon TPC experiment designed for short-baseline neutrino physics, currently running at Fermilab. Due to its location near the surface, cosmic muons can be a source of backgrounds to several analyses and a good understanding of them is of fundamental importance for the experiment. This study presents a method of using an external muon counter system to determine the cosmic-ray reconstruction efficiency in MicroBooNE.
 
-  The reconstruction of the tracks is performed using the multi-algorithm Pandora framework and its efficiency. The data reconstruction efficiency is $\epsilon_{\mathrm{data}}=96.1\pm0.1\thinspace(\mathrm{stat}) \pm 1.1\thinspace(\mathrm{sys})\thinspace\%$, in good agreement with the Monte Carlo reconstruction efficiency $\epsilon_{MC} = 96.3\pm0.1\thinspace\%$.
+  The reconstruction of the tracks is performed using the multi-algorithm Pandora framework. The data reconstruction efficiency is $\epsilon_{\mathrm{data}}=96.1\pm0.1\thinspace(\mathrm{stat}) \pm 1.1\thinspace(\mathrm{sys})\thinspace\%$, in good agreement with the Monte Carlo reconstruction efficiency $\epsilon_{MC} = 96.3\pm0.1\thinspace\%$.
 
-  Data has been acquired with three different geometrical configurations of the the external muon counter system, corresponding to different parts of the LArTPC. We show that the presence of detector non-uniformities, caused by regions with missing wires, leads to a systematic error in the measurement of the data reconstruction efficiency.
+  Data has been acquired with the external muon counter system placed in the three different positions, corresponding to cosmic rays hitting different parts of the LArTPC. We show that the presence of detector non-uniformities, caused by regions with missing wires, leads to a systematic error in the measurement of the data reconstruction efficiency.
 
-  This analysis is a small-scale demonstration of the method that can be used with the data coming from the Cosmic Ray Tagger, which is able to tag $\sim80\%$ of the cosmic rays hitting the LArTPC and covers the entire detector.
+  This analysis represents a small-scale demonstration of the method that can be used with the data coming from the Cosmic Ray Tagger, which is able to tag $\sim80\%$ of the cosmic rays hitting the LArTPC and covers the entire detector.
 \end{abstract}
 
 \tableofcontents
@@ -58,7 +58,7 @@ The message of the public note based upon this document is as follows:
 \end{itemize}
 
 The figures that will be carried forward to the public note are Figg. \ref{fig:coord}, \ref{fig:mucs}, \ref{fig:evd}, \ref{fig:alignment}, \ref{fig:mucs_angles}, \ref{fig:purity}, \ref{fig:3d}, \ref{fig:significance}, \ref{fig:wires}, \ref{fig:example}, \ref{fig:sampling}, \ref{fig:1d}, \ref{fig:2d}.
-
+\clearpage{}
 \section{Introduction}
 This analysis note describes the work done to study the reconstruction efficiencies using a dataset of cosmic rays passing through the Muon Counter System (MuCS).
 The goal is to provide data and Monte Carlo reconstruction efficiencies that can be used to compare reconstruction performances and to show that an external cosmic-ray counter can be used to measure the data reconstruction efficiency in the LArTPC.
